# PECANN-CAPU

./: .gitignore  LICENSE  README.md  pyproject.toml
1_uns_heat_composite_pntw/core/: trainer.py
2_burgers_rarefaction_mesh_130_64/: job.1617736.out  run.slurm
2_burgers_rarefaction_mesh_130_64/core/: trainer.py
2_burgers_rarefaction_mesh_130_64/physics/: residuals.py
2_burgers_rarefaction_mesh_130_64/viz/: viz.py
3_psn_b50_dom512/: config.py
4_helm_freq_6_6_adam/: config.py
4_helm_freq_6_6_adam/diagnostics/: diagnostics.py
4_helm_freq_6_6_lbfgs/core/: trainer.py
6_inv_uns_heat_err5%/: job.1633035.out
6_inv_uns_heat_err5%/models/: __init__.py
6_inv_uns_heat_err5%/physics/: residuals.py
6_inv_uns_heat_err5%/viz/: viz.py
forward/1d_poisson_b50_dom512/core/: trainer.py
forward/1d_poisson_b50_dom512/logs/: psn_freq_b50_batch_512_nn4_100_1.pt  psn_freq_b50_batch_512_nn4_100_2.pt  psn_freq_b50_batch_512_nn4_100_3.pt  psn_freq_b50_batch_512_nn4_100_4.pt  psn_freq_b50_batch_512_nn4_100_5.pt
forward/burgers_rarefaction_mesh_130_64/: config.py
forward/burgers_rarefaction_mesh_130_64/data/: collocation.py
forward/helmholtz_frequency_6_6_lbfgs/: config.py
forward/helmholtz_source_l5_fourier/: main.ipynb
forward/reverse_advection_T8_mesh257/: main.ipynb
forward/unsteady_heat_composite_aggregation/: main.ipynb
forward/unsteady_heat_composite_pointwise/: config.py
inverse/infer_spatial_heat_source_error5%/: config.py  inv_uns_heat_nn1_40_1.pt  job.1633035.err  main.ipynb  run.slurm
pecann_capu/: __init__.py
(+78 files in other folders)
